wp-content/themes/makerfaire/less/quora.less
/* ... */
.page-id-460236 h1:first-child {
    margin-top: 0;
}

.quora .drop-holder .box b {
    color: #333;
    font: 12px/14px "latobold";
    padding: 7px 0 0;
}

.quora .navbar-nav > li:nth-child(3) .drop-holder .drop .col .item .box b a {
    font-size: inherit;
    line-height: inherit;
    font-weight: 400;
    color: #666;
}

#performers .caption {
    padding: 8%;
}


/*Responsive wrap for video page*/
.videoWrapper {
    position: relative;
    padding-bottom: 53%;
/* 16:9 */
    height: 0;
}

.videoWrapper iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

/*Slideshow page layout*/

.page-id-461597 h2,
.page-id-460236 h2 {
    font-size: 14px;
    color: #333;
    margin-top: 0;
}

.page-id-461597 .social,
.page-id-460236 .social {
    margin-bottom: 15px;
    min-height: 32px;
}

.page-id-461597 h1 {
    margin-top: 0;
}

.slideshow-nav {
    text-align: center;
    margin-bottom: 10px;
    margin-left: 5px;
    margin-right: 5px;
    padding-top: 10px;
    border-top: 1px solid #eee;
}

.slideshow-nav .col-xs-3 {
    border-left: 1px solid #eee;
}

.slideshow-nav .active.col-xs-3 {
    font-weight: bold;
}

.slideshow-nav .col-xs-3:first-child {
    border: none !important;
}
img.attachment-post-thumbnail{width:100%;height:auto;}

#ribbonPage{
    position:static;
    select{border:none; background:none;color:#085a7e}
    .textSearch{float:right}
    /* override Quor placeholder hardcoded style */
    .textSearch span {        
        color: #D3D3D3 !important;
    }
    .textSearch span,.textSearch input {padding: 3px 10px;}
    .projImg{width: 100%;height: 270px;}
    .bluedata,.reddata{    padding: 5px; margin: 5px;float: left;font-size:12px;}
    .bluedata{background-color: #0e7db5}
    .reddata{background-color: #ff0000}
    .ribbData {position:relative;margin:10px 0;}
    div.makerData    {  
        position: absolute;
        bottom: 0;
        background: rgba(0, 0, 0, 0.5);
        padding: 10px;
        opacity: 0;
        -webkit-transition: opacity .25s ease;
        -moz-transition: opacity .25s ease;
        color: white;
        width: 90%;
        height: 60%;
        vertical-align: text-top;overflow:hidden;
        font-size:14px;
    }

    .ribbData:hover div.makerData {opacity:1;}

    .redRibbon,.blueRibbon,.redMakey,.blueMakey{
        width: 38px;
        height: 56px;
        background-size: 38px 56px;
        background-repeat: no-repeat;
        float:left;
        font-weight: bold;
        color: #FBD818;
        padding: 11px;
    }
    .redRibbon{background-image: url('../images/red-ribbon.png');}
    .blueRibbon{background-image: url('../images/blue-ribbon.png');}
    .redMakey{background-image: url('../images/red-makey.png');}
    .blueMakey{background-image: url('../images/blue-makey.png');}
    
    .entryImg{position:relative}
    .ribbons{position: absolute; top: 9px; left:20px;}
    

    .pagination {
	background: none;
	border-radius: 0;
	bottom: 0;
	line-height: 22px;
	margin: 0;
	padding: 0;
	text-align: center;
	width: 100%;
    }
    .pagination li  {
            display: block;
            margin:0px;
            float:left;
    }
    .pagination li a {            
            border-radius: 0;
            display: block;
            height: auto;
            overflow: none;
            text-indent: 0;
            transition: all 0.3s ease 0s;
            width: auto;
    }
    .projName{
       font-size:18px;  
    }
    .box{    
        color: #085a7e;
        padding: 10px;
        border: thin solid grey;
        float:left;  
        width: 7em;
        text-align: center;
        i{padding:0 5px;}
    }
    .box.active{
        background-color: #085a7e;
        color:#fff
    }    
    .ribbonList{
        .blueRibbon,.redRibbon,.redMakey,.blueMakey
        { float:none}
        .ribbonTitle div{display: inline-block; vertical-align: middle;}
        .ribbonTitle{padding-top:2em;font-size:1.4em;}
    }
}

/* maker admin */
.gv-list-container .maker-admin{
    /* parent container */
    overflow: hidden;
    position: relative;
    width: 100%;
    margin: 2em 0;
    .entryImg{
        float:left;
        padding-right: 5px;
        width:25%;
        height:auto;
        p{margin:0}
        img {width:100%; height:auto; min-height:10em}
    }
    
    .entryData{          
        font-weight:bold;
        font-size: 1.3rem;
        padding-left: 5px;
        width:70%;   
        height: 100%;
        width: 70%;
        position: absolute;
        right: 0;
        top: 0;
        .statusBox{height: 1.924em;
            display: block;
            padding: .2em 1em;
            border-radius: 4px;
            .statusText{color:white}
        }
        .greenStatus{background-color:#7ED321}
        .greyStatus {background-color:#B6B6B6}
        .clear{clear:both}                
        .links{position: absolute;
        bottom: 0;
        width: 98%;
        border-top: thin solid grey;
        border-bottom: thin solid grey;
        
        p {margin:0}
        i{margin:.2em;}
        }
    }    
    span.edit{float: left;margin-right: .2em;}        
}
/* ... */

